--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -93,7 +93,7 @@ section.masthead.bg-dark.bg-blue-green-grad.product-cpaas.relative id=current_pa
           .media-object-section.media-object--info.main-section.align-self-middle
             h1.headline-3.text-bold.margin-bottom-sm Compliant Platform as a Service
             / .strip.strip-small.strip-cmi.margin-bottom-small
-            p.lead = current_page.data.summary
+            p.lead Build & deploy digital health apps on a compliant, hosted platform
             = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
     = partial "partials/snippets/nav-sub-product"
