--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -59,7 +59,7 @@ section.masthead.bg-dark.bg-blue-purple-grad.product-cks.relative id=current_pag
             = inline_svg("cks-logo-w", class: "masthead-icon")
           .media-object-section.media-object--info.main-section.align-self-middle
             h1.headline-3.text-bold.margin-bottom-sm Compliant Kubernetes Service
-            p.lead = current_page.data.summary
+            p.lead Exchange data securely with any EHR in a scalable fashion
             = partial "partials/snippets/button", :locals => { :label => "Get Pricing", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-cks-top", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
     = partial "partials/snippets/nav-sub-product"
