--- a/source/assets/scss/views/products-mastheads.scss
+++ b/source/assets/scss/views/products-mastheads.scss
@@ -94,6 +94,13 @@
         padding-right: 1vw;
     }
 }
+.art-accent {
+    transition: fill-opacity $timing-default linear, transform $timing-default ease;
+    fill-opacity: 0.3;
+    @include breakpoint (large) {
+        fill-opacity: 1;
+    }
+}
 // page-specific styles for gradients, artwork
 .product-cpaas { /* grad-green-blue */
     $hue: 212;
@@ -124,6 +131,24 @@
     //     background: linear-gradient(58.65deg, rgba(212, 72, 131, 0.81) -2.22%, rgba(217, 72, 155, 0.19) 14.52%, rgba(218, 72, 159, 0) 27.72%, rgba(136, 32, 101, 0) 86.95%, rgba(185, 41, 102, 0.81) 103.16%), linear-gradient(111.54deg, rgba(255, 204, 105, 0.63) -6.07%, rgba(168, 116, 54, 0) 24.26%), linear-gradient(189.79deg, #312F2F -0.87%, #62605D 87.34%);
     //     mix-blend-mode: normal;
     // }
+    .art-light-blob {
+        background: radial-gradient(20vw at 44.68% 42.78%, hsla($hue, 53, 42, 0.88) 0%, hsla($hue, 53, 42, 0.09) 82.87%, hsla($hue, 53, 42, 0) 100%);
+    }
+}
+.product-cks {
+    $hue: 255;
+    .art-accent {
+        transform: translate3d(2vw, -1vw, 0) scale3d(1, 1, 1);
+    }
+    .art-light-blob {
+        background: radial-gradient(20vw at 44.68% 42.78%, hsla($hue, 53, 42, 0.88) 0%, hsla($hue, 53, 42, 0.09) 82.87%, hsla($hue, 53, 42, 0) 100%);
+    }
+}
+.product-ccms {
+    $hue: 278;
+    .art-accent {
+        transform: translate3d(5vw, 7vw, 0) scale3d(1.2, 1.2, 1);
+    }
     .art-light-blob {
         background: radial-gradient(20vw at 44.68% 42.78%, hsla($hue, 53, 42, 0.88) 0%, hsla($hue, 53, 42, 0.09) 82.87%, hsla($hue, 53, 42, 0) 100%);
     }
