--- a/source/ehr-integration/index.html.slim
+++ b/source/ehr-integration/index.html.slim
@@ -13,7 +13,8 @@ collectionName: "product"
 priority: "0.9"
 ---
 ruby:
-  current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
+  bg_image = 'https://images.ctfassets.net/189dvqdsjh46/71ZkJFY8CgC3a0huhg9Wqh/19a52b2852b0f336e0c51d8acfcc8e85/bg-cards.svg'
+  current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
   current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/Qh24iUaLW6Saoe4QKAAu6/3c1d9922a320aa39808f5b55e1a2583f/cta-integrations-share.jpg"
   featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/0715bdb8ca051eb4e3e69085fc78c443/Computer_programmers_working_together.jpg"
 / = partial "partials/snippets/platform-icons"
@@ -46,7 +47,7 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-12.container-im
 
 / section#top.section-article.bg-gray-11.container-image-fill.lozad data-background-image="?fit=crop&w=1600&h=800"
 
-section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
+section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_image
   / .row
   /   .columns.small-12.medium-12.large-8
   /     h2.headline-2.text-bold Get back to solving problems for heathcare
@@ -164,7 +165,7 @@ section#integration.section-article.bg-gray-11
       = partial "/partials/content/collection-list", :locals => { :collection => collection }
 
 .strip.strip-cmi
-aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-background-image=bg_product_dark
+aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-background-image=bg_image
   .relative.has-blob
     .relative.z-5
       .row.align-center.group--sm
