🚨Important change to customCSS view loading: can pass an array in now, just like the customJS.

--- a/source/assets/scss/modules/components.scss
+++ b/source/assets/scss/modules/components.scss
@@ -264,4 +264,41 @@ span.label + span.label { // when in a tag list
 
     }
 }
+// expand/toggle component - moved from products.scss
+.icon-toggle {
+    opacity: 0.5;
+    // margin-bottom: 0.03em;
+    margin-left:   0.1em;
+    @include transition(transform $timing-default, opacity $timing-default);
+}
+
+.is-toggle {
+    @include transition(color $timing-default, transform $timing-default);
+    &:hover {
+        .icon-toggle {
+            opacity: 1;
+            transform: translate3d(0, 2px, 0);
+        }
+    }
+    &[aria-expanded="true"] {
+        color: black;
+        .icon-toggle {
+            transform: rotate(180deg);
+        }
+    }
+    &[aria-expanded="false"] {
+        color: $color_prime-alt;
+    }
+}
+
+.show-more {
+    &--container {
+        display: none;
+        // height: 0;
+        &[aria-hidden='false'] { // ZF toggler
+            display: inline-block;
+            @include animation (expando 0.3s ease);
+        }
+    }
+}
 
