--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -7,7 +7,7 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "September 25, 2018"
 ogType: "product"
 category: "compliance"
-customCSS: "products"
+customCSS: "products, products-mastheads"
 layout: products
 collectionName: "products"
 collectionOrder: 3
@@ -66,7 +66,7 @@ section.masthead.bg-dark.bg-purple-bp-grad.product-ccms.relative id=current_page
     .z-0.art-bg-fill.art-pattern.container-image--center.lozad data-background-image=bg_image
   .strip.strip-small.strip-ccms
 
-section.section-article.pad-no-bottom.container-gray-11.drop-taper id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
+section.section-article.pad-no-bottom.container-gray-11 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
   .row.align-center
     .columns.small-12.large-8.text-center
       h2.headline-2 API-Driven Compliance
