--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 ogType: "product"
 category: "compliance"
-customCSS: "products"
+customCSS: "products, products-mastheads"
 layout: products
 collectionName: "products"
 collectionOrder: 1
