--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -5,7 +5,7 @@ navTitle: "Datica CPaaS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 ogType: "product"
-customCSS: "products"
+customCSS: "products, products-mastheads"
 layout: products
 category: "compliance"
 collectionName: "products"
