Buffed up Services block in CMI page; tweaked Pricing markup spacing.

--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -96,7 +96,7 @@ scss:
             p Leverage Datica's expertise to help instantiate any new integration sites. Hundreds of live sites have been integrated over the last four years via this service.
 
       #cta.columns.small-12.medium-large-6.large-5
-        .callout.pad--lg.drop.form-embed.nomargin.pricing-form.group
+        .callout.pad--lg.drop.form-embed.pricing-form.group
           / h3.headline-4.text-center Request Pricing
           p Thank you for your interest in the Datica product suite. A representative will reach out to schedule time to answer your questions.
           - the_form = data.site.forms['pdrdbrjyUKoooYI8EUAYw']
