--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -182,14 +182,15 @@ section.section-article.bg-gray-3
 
 .strip.strip-cmi
 section.section-article.container-gray-12 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
-  .row.align-left
-    .columns.small-12.large-6
-      h2.headline-3.group Integration Services
+  .row.align-center.group
+    .columns.small-12.large-6.text-center
+      = inline_svg("icon-consulting-compass", class: "icon-size--xlarge svg-color--gray-5")
+      h2.headline-2.group Integration Services
       h3.headline-4 Take the stress out of EHR integrations.
       p.lead We handle the stress, risk and complexity of EHR integrations, so you can help medical teams do what they do best.
-  .row.align-left
+  .row.align-center.align-middle
     .column.small-12.medium-6
-      h3.headline-4 Get back to solving problems for heathcare
+      h3.headline-5 Get back to solving problems for heathcare
       p In the past, EHR integration projects have been frustrating obstacles for innovation teams, preventing them from creating breakthrough solutions for overwhelmed medical professionals.
       p Imagine being free to focus on <em>solving</em> problems again, instead of the worry and cost of integrating your solution with your EHR.
       p.group Integrating with EHRs is an ongoing challenge for digital health solutions. EHR integration is not just a technology problem, it’s also a people and process problem.
@@ -200,7 +201,7 @@ section.section-article.container-gray-12 id=current_page.data.subnav[2].slug da
         - if quote_services.has_key?("related_person")
           = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
     .columns.small-12.medium-6.large-5
-      .card.bg-dark.bg-red-yellow-grad
+      .card.bg-gray-4.pad
         .card-section
           h3.headline-4 Project Management
           p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
@@ -236,7 +237,7 @@ section.section-article.bg-gray-11
     .row.align-center
       .columns.small-12.text-center.group
         h2.headline-3 = cardgroup.title
-    .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
+    .row.full-width.align-center.small-up-1.medium-up-2.large-up-2.xlarge-up-4
       - cardgroup["related_entries"].each do | card |
         - carditem = data.site.caseStudy[card.id]
         - cust = data.site.customers[carditem.customer.id]
