Last minute change to masthead product icon media-object alignment. Still not feeling it 100%

--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -46,7 +46,7 @@ scss:
 
 section.masthead.bg-dark.bg-red-yellow-grad.product-cmi.relative id=current_page.data.subnav[0].slug data-magellan-target=current_page.data.subnav[0].slug
   .section-article--lg.relative.z-10
-    .row.align-middle
+    .row.align-middle.align-center
       .columns.small-12.medium-10.large-8
         .media-object.relative.stack-for-small 
           .media-object-section
