--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -52,7 +52,7 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
 
 section.masthead.bg-dark.bg-blue-purple-grad.product-cks.relative id=current_page.data.subnav[0].slug data-magellan-target=current_page.data.subnav[0].slug
   .section-article--lg.relative.z-10
-    .row.align-middle
+    .row.align-middle.align-center
       .columns.small-12.medium-10.large-8
         .media-object.relative.stack-for-small 
           .media-object-section
