--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -76,7 +76,7 @@ ruby:
   current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/5nhUL1CBYQIKy4Qu822yws/2dda37e98f8e57a82a289d9e324e494b/share-cpaas-2.jpg'
-  the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
+  the_form = data.site.forms['5KUwvp8WsgiIOscYKq0SaK']
 
 / <style type="text/css">.product-bg {background-image: url(#{bg_image});}</style>
 
@@ -85,7 +85,7 @@ section.masthead.bg-dark.bg-blue-green-grad.product-cpaas.relative id=current_pa
   / svg id="disc-1" class="shape-product"
   /   use xlink:href="#disc"
   .section-article--lg.relative.z-10
-    .row.align-middle
+    .row.align-middle.align-center
       .columns.small-12.medium-10.large-8
         .media-object.relative.stack-for-small 
           .media-object-section
@@ -237,10 +237,32 @@ section.section-article.container-gray-12 id=current_page.data.subnav[4].slug da
         - cust = data.site.customers[carditem.customer.id]
         .column
           = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
+/ .strip.strip-small.strip-cpaas
+/ section.bg-dark.bg-blue-green-grad.product-cpaas id=current_page.data.subnav[5].slug data-magellan-target=current_page.data.subnav[5].slug
+/   .section-article.container-image-fill.lozad data-background-image='https://images.ctfassets.net/189dvqdsjh46/6Xc3X2fJYIcwz2Sd5rwuRl/cd1c5622ec375bd87625e29c9dfdb07a/bg-circles.svg'
+/     .row.align-center
+/       .columns.small-12.medium-10.large-10.text-center
+/         h2.headline-3.group Talk to a Datica Compliance Expert Today.
+/         = partial "partials/snippets/button", :locals => { :label => "Ask about pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :data_track_group => "compliance", :item_id => "get-ccms-footer" }
+
+
 .strip.strip-small.strip-cpaas
 section.bg-dark.bg-blue-green-grad.product-cpaas id=current_page.data.subnav[5].slug data-magellan-target=current_page.data.subnav[5].slug
-  .section-article.container-image-fill.lozad data-background-image='https://images.ctfassets.net/189dvqdsjh46/6Xc3X2fJYIcwz2Sd5rwuRl/cd1c5622ec375bd87625e29c9dfdb07a/bg-circles.svg'
-    .row.align-center
-      .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3.group Talk to a Datica Compliance Expert Today.
-        = partial "partials/snippets/button", :locals => { :label => "Ask about pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :data_track_group => "compliance", :item_id => "get-ccms-footer" }
+  .section-article.container-image--center.lozad data-background-image=bg_image
+    .row.align-center.align-middle
+      .columns.small-12.medium-6.large-5
+        h2.headline-3.group--2x Schedule a conversation to learn more about Datica Compliant Platform as a Service.
+        / = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => "container-color--tint-50 " })
+        .callout.callout--dark-alpha
+          blockquote.quote--serif
+            | The Datica team is helping us solve critical infrastructure and scaling problems faster and more competently than we can in-house.
+          .media-object.card-person
+            .media-object-section
+              img.avatar.avatar--large.circle alt=("Jon Pearce") src="https://images.ctfassets.net/189dvqdsjh46/6IUA5I8suWEWI28YcIkMgm/134af76338fd572e45a9d4a716a8ddb7/headshot-zipnosis.jpg" /
+            .media-object-section.main-section.align-self-middle
+              h4.person-name Jon Pearce
+              p.person-title CEO, Zipnosis
+      #form.columns.small-12.medium-large-6.large-4
+        .callout.drop
+          / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
+          = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
