Changing from fixed bg to fill (cover); safari is quite janky on scroll with this technique.

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -99,7 +99,7 @@ section.masthead.bg-dark.bg-blue-green-grad.product-cpaas.relative id=current_pa
     = partial "partials/snippets/nav-sub-product", :locals => { :parent_url => "/cloud-compliance/" }
     = inline_svg("products-discs-color", class: "z-5 art-accent step-1")
     .art-bg-fill.art-light-blob
-    .z-0.art-bg-fill.art-pattern.container-image--fixed.lozad data-background-image=bg_image
+    .z-0.art-bg-fill.art-pattern.container-image-fill.lozad data-background-image=bg_image
 
 .strip.strip-small.strip-cpaas
 section.section-article.bg-gray-12
@@ -126,7 +126,7 @@ section.section-article.bg-gray-12
       p.lead.nomargin Your app is now compliant on Datica.
       p.text-left Once your application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
 
-section.section-article.container-image--fixed.bg-gray-2.lozad data-background-image=bg_image id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
+section.section-article.container-image-fill.bg-gray-2.lozad data-background-image=bg_image id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       h2.headline-5.spaced-out.faded Shared Responsibility
